ingress-task/deployment2-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: my-nodeport-service2
spec:
  selector:
    app: nginx 
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30037
    protocol: TCP
