ingress-task/ingress.yml
  
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /foo
        backend:
          serviceName: my-nodeport-service
          servicePort: 80
      - path: /bar
        backend:
          serviceName: my-nodeport-service2
          servicePort: 80
